Added Some images and strated added content

--- a/resume.html
+++ b/resume.html
@@ -38,38 +38,7 @@
   <body>
 
 
-    <header>
-      <!-- Toggle Menu -->
-      <button class="toggle-btn">
-        <span class="lines"></span>
-      </button>
-      <div class="menu">
-        <ul class="nav">
-          <li class="active">
-            <a href="#home">Home</a>
-          </li>
-          <li>
-            <a href="#education">Education</a>
-          </li>
-          <li>
-            <a href="#experience">Experience</a>
-          </li>
-          <li>
-            <a href="#portfolio">Portfolio</a>
-          </li>
-          <li>
-            <a href="#services">Services</a>
-          </li>
-          <li>
-            <a href="#testimonial">Testimonial</a>
-          </li>
-          <li>
-            <a href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <!-- end Toggle menu -->
-    </header>
+
 
     <!-- Home -->
     <section id="home" class="fill">
@@ -93,7 +62,7 @@
     <section id="education">
       <div class="container-fluid">
         <div class="row">
-          <div class="section-background col-xs-12 col-sm-6" data-mh="match-edu">
+          <div class="section-background col-xs-12 col-sm-6" data-mh="match-ed">
             <h2>Education</h2>
             <ul class="resume-box">
               <li>
