--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Gentleman | Personal vCard Template</title>
+    <title>Prateek Bhatnagar | Resume'</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.png">
     <!-- ===== STYLESHEETS ===== -->
@@ -34,6 +34,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
   </head>
   <body>
 
@@ -48,9 +49,9 @@
             <div class="home-box col-xs-12">
               <div>
                 <img src="images/avatar.jpg" alt="">
+
                 <h1>Prateek Bhatnagar</h1>
-                <p>Software Developer &#149 Computer Science Researcher</p>
-              </div>
+                <p>Software Developer &#149 Computer Science Engineer &#149 Researcher</p>
             </div>
           </div><!-- end row -->
         </div><!-- end container -->
@@ -63,7 +64,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="section-background col-xs-12 col-sm-6" data-mh="match-ed">
-            <h2>Education</h2>
+            <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEducation</h2>
             <ul class="resume-box">
               <li>
                 <div class="year" data-mh="match-edu-box-1">
@@ -93,16 +94,8 @@
               </li>
             </ul>
           </div>
-        </div><!-- end row -->
-      </div><!-- end container -->
-    </section>
-    <!-- end Education -->
-
-    <!-- Experience -->
-    <section id="experience">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="section-background col-xs-12 col-sm-6 col-sm-push-6" data-mh="match-experience">
+          <div class="skills-background col-xs-12 col-sm-6" data-mh="match-edu" >
+          <div class="section-background col-xs-12 col-sm-6" data-mh="match-edu" style="width: 100%;">
             <h2>Experience</h2>
             <ul class="resume-box">
               <li>
@@ -170,6 +163,17 @@ Analysts for cleaning raw data.
 
             </ul>
           </div>
+        </div>
+        </div><!-- end row -->
+      </div><!-- end container -->
+    </section>
+    <!-- end Education -->
+
+    <!-- Experience -->
+    <section id="experience">
+      <div class="container-fluid">
+        <div class="row">
+
         </div><!-- end row -->
       </div><!-- end container -->
     </section>
@@ -177,277 +181,31 @@ Analysts for cleaning raw data.
 
     <!-- Portfolio -->
     <section id="portfolio">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="section-background col-xs-12 col-sm-6" data-mh="match-portfolio">
-            <h2>Portfolio</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-          </div>
-          <div class="portfolio-content col-xs-12 col-sm-6" data-mh="match-portfolio">
-            <div id="portfolioSlider" class="owl-carousel">
-              <!-- 1 -->
-              <div>
-                <img src="images/portfolio-img-1.jpg" alt=""><!-- image url -->
-                <div class="image-layer">
-                  <div class="image-title">
-                    <h3>Project Title</h3>
-                    <a class="lightbox-popup" href="#popup-1">view detail</a>
-                  </div>
-                </div>
-                <!-- popup content -->
-                <div id="popup-1" class="mfp-hide popup-box">
-                  <img src="images/portfolio-img-1.jpg" alt=""><!-- image url -->
-                  <div class="popup-content">
-                    <h3>Project Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
-                  </div>
-                </div>
-                <!-- end popup content -->
+          <div class="container-fluid">
+            <div class="row">
+              <div class="section-background col-xs-12 col-sm-6" data-mh="match-portfolio" style="height: 307px; width:100%">
+                <h2>Project Portfolio</h2>
+                <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence</p>
               </div>
-              <!-- 2 -->
-              <div>
-                <img src="images/portfolio-img-2.jpg" alt=""><!-- image url -->
-                <div class="image-layer">
-                  <div class="image-title">
-                    <h3>Project Title</h3>
-                    <a class="lightbox-popup" href="#popup-2">view detail</a>
-                  </div>
-                </div>
-                <!-- popup content -->
-                <div id="popup-2" class="mfp-hide popup-box">
-                  <img src="images/portfolio-img-2.jpg" alt=""><!-- image url -->
-                  <div class="popup-content">
-                    <h3>Project Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla consequat massa quis enim.</p>
-                  </div>
-                </div>
-                <!-- end popup content -->
-              </div>
-              <!-- end 2 -->
-            </div>
-          </div>
-        </div><!-- end row -->
-      </div><!-- end container -->
-    </section>
-    <!-- end Portfolio -->
 
-    <!-- Services -->
-    <section id="services">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="section-background col-xs-12 col-sm-6 col-sm-push-6" data-mh="match-services">
-            <h2>Services</h2>
-            <!-- Service box 1 -->
-            <div class="service-box">
-              <div>
-                <i class="fa fa-laptop"></i>
-              </div>
-              <div>
-                <h4>Web Development</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-              </div>
-            </div>
-            <!-- Service box 2 -->
-            <div class="service-box">
-              <div>
-                <i class="fa fa-bar-chart"></i>
-              </div>
-              <div>
-                <h4>Analytics</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-              </div>
-            </div>
-            <!-- Service box 3 -->
-            <div class="service-box">
-              <div>
-                <i class="fa fa-pencil"></i>
-              </div>
-              <div>
-                <h4>Web Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-              </div>
-            </div>
-            <!-- Service box 4 -->
-            <div class="service-box">
-              <div>
-                <i class="fa fa-camera-retro"></i>
-              </div>
-              <div>
-                <h4>Photography</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-              </div>
-            </div>
-            <!--  Service box 5 -->
-            <div class="service-box">
-              <div>
-                <i class="fa fa-apple"></i>
-              </div>
-              <div>
-                <h4>Mobile Application</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-              </div>
-            </div>
-            <!-- Service box 6 -->
-            <div class="service-box">
-              <div>
-                <i class="fa fa-support"></i>
-              </div>
-              <div>
-                <h4>Support</h4>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-              </div>
-            </div>
-            <!-- end Service box 6 -->
-          </div>
-          <!-- Facts -->
-          <div class="facts-background col-xs-12 col-sm-6 col-sm-pull-6" data-mh="match-services">
-            <div class="black-layer">
-              <div class="middle-content">
-                <!-- Fact box 1 -->
-                <div class="fact-box">
-                  <p data-to="127" data-append="+">0</p>
-                  <h4>Cups of coffee</h4>
-                </div>
-                <!-- Fact box 2 -->
-                <div class="fact-box">
-                  <p data-to="10" data-append="+">0</p>
-                  <h4>Projects Done</h4>
-                </div>
-                <!-- Fact box 3 -->
-                <div class="fact-box">
-                  <p data-to="300" data-append="+">0</p>
-                  <h4>Happy Clients</h4>
-                </div>
-                <!-- end Fact box 3 -->
-              </div>
-            </div>
-          </div><!-- end Facts -->
-        </div><!-- end row -->
-      </div><!-- end container -->
-    </section>
-    <!-- end Services -->
+            </div><!-- end row -->
+          </div><!-- end container -->
+        </section>
 
-    <!-- Testimonial -->
-    <section id="testimonial">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="section-background col-xs-12 col-sm-6" data-mh="match-testimonial">
-            <h2>Testimonial</h2>
-            <!-- Testimonial box 1 -->
-            <div class="testimonial-box clearfix">
-              <div>
-                <img src="images/t-img-1.jpg" alt="">
-              </div>
-              <div>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean commodo ligula eget dolor.</p>
-                <h4>John Doe</h4>
-              </div>
-            </div>
-            <!-- Testimonial box 2 -->
-            <div class="testimonial-box clearfix">
-              <div>
-                <img src="images/t-img-2.jpg" alt="">
-              </div>
-              <div>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean commodo ligula eget dolor.</p>
-                <h4>Kathy Daniels</h4>
-              </div>
-            </div>
-            <!-- Testimonial box 3 -->
-            <div class="testimonial-box clearfix">
-              <div>
-                <img src="images/t-img-3.jpg" alt="">
-              </div>
-              <div>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean commodo ligula eget dolor.</p>
-                <h4>Alan Bates</h4>
-              </div>
-            </div>
-            <!-- end Testimonial box 3 -->
-          </div>
-          <!-- Clients -->
-          <div class="clients-background col-xs-12 col-sm-6" data-mh="match-testimonial">
-            <div class="white-layer">
-              <div class="middle-content">
-                <div id="clientSlider" class="owl-carousel">
-                  <!-- Client box 1 -->
-                  <div class="client-box">
-                    <img src="images/client-1.png" alt="">
-                  </div>
-                  <!-- Client box 2 -->
-                  <div class="client-box">
-                    <img src="images/client-2.png" alt="">
-                  </div>
-                  <!-- Client box 3 -->
-                  <div class="client-box">
-                    <img src="images/client-3.png" alt="">
-                  </div>
-                  <!-- Client box 4 -->
-                  <div class="client-box">
-                    <img src="images/client-4.png" alt="">
-                  </div>
-                  <!-- Client box 5 -->
-                  <div class="client-box">
-                    <img src="images/client-5.png" alt="">
-                  </div>
-                  <!-- Client box 6 -->
-                  <div class="client-box">
-                    <img src="images/client-6.png" alt="">
-                  </div>
-                  <!-- end Client box 6 -->
-                </div>
-              </div>
-            </div>
-          </div><!-- end Clients -->
-        </div><!-- end row -->
-      </div><!-- end container -->
-    </section>
-    <!-- end Testimonial -->
 
-    <!-- Contact -->
-    <section id="contact">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="section-background col-xs-12 col-sm-6 col-sm-push-6" data-mh="match-contact">
-            <h2>Get In Touch</h2>
-            <ul class="info">
-              <li>
-                <i class="fa fa-map-marker"></i>
-                <span>Street Road, City, 123</span>
-              </li>
-              <li>
-                <i class="fa fa-envelope"></i>
-                <span>alexander@domain.com</span>
-              </li>
-              <li>
-                <i class="fa fa-phone"></i>
-                <span>+(123) 456 789</span>
-              </li>
-            </ul>
-            <form method="post" id="contactform">
-              <div class="input-style">
-                <input type="text" id="name" name="name" placeholder="Name">
-              </div>
-              <div class="input-style">
-                <input type="email" id="email" name="email" placeholder="E-Mail">
-              </div>
-              <div class="text-style">
-                <textarea name="message" id="message" placeholder="Message"></textarea>
-              </div>
-              <input type="submit" id="submit" class="submit-style" name="submit" value="Send Message">
-              <div class="submit-result">
-                <p id="success">Your Message has been sent!</p>
-                <p id="error">Something went wrong, go back and try again!</p>
-              </div>
-            </form>
-          </div>
-          <div class="google-maps col-xs-12 col-sm-6 col-sm-pull-6" data-mh="match-contact">
-            <div id="map-canvas"></div>
-          </div>
-        </div><!-- end row -->
-      </div><!-- end container -->
-    </section>
-    <!-- end Contact -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Footer -->
     <footer>
@@ -455,7 +213,7 @@ Analysts for cleaning raw data.
         <div class="container-fluid">
           <div class="row">
             <div class="col-left col-xs-6">
-              <p>Made with <i class="fa fa-heart"></i> by <a href="http://themeforest.net/user/FlaTheme">FlaTheme</a></p>
+              <p></p>
             </div>
             <div class="col-right col-xs-6">
               <a href="#">
