Added Projects section + fixed formatting and changed some text

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                 </div>
                 <div class="box-content" data-mh="match-edu-box-2">
                   <h4>Vellore Institute Of Technology, Vellore </h4>
-                  <p>B.TECH Computer Science And Engineering - 8.38/10 CGPA</p>
+                  <p>B.TECH Computer Science And Engineering <br> 8.38/10 CGPA</p>
                 </div>
               </li>
             </ul>
           </div>
           <div class="skills-background col-xs-12 col-sm-6" data-mh="match-edu" >
           <div class="section-background col-xs-12 col-sm-6" data-mh="match-edu" style="width: 100%;">
-            <h2>Experience</h2>
+            <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspExperience</h2>
             <ul class="resume-box">
               <li>
                 <div class="year" data-mh="match-exp-box-1">
@@ -170,37 +170,105 @@ Analysts for cleaning raw data.
     <!-- end Education -->
 
     <!-- Experience -->
-    <section id="experience">
-      <div class="container-fluid">
-        <div class="row">
 
-        </div><!-- end row -->
-      </div><!-- end container -->
-    </section>
     <!-- end Experience -->
-
     <!-- Portfolio -->
-    <section id="portfolio">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="section-background col-xs-12 col-sm-6" data-mh="match-portfolio" style="height: 307px; width:100%">
-                <h2>Project Portfolio</h2>
-                <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence</p>
-              </div>
+     <section id="portfolio">
+       <div class="container-fluid">
+         <div class="row">
+           <div class="section-background col-xs-12 col-sm-6" data-mh="match-portfolio">
+             <h2>Project Portfolio</h2>
+             <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence</p>
 
-            </div><!-- end row -->
-          </div><!-- end container -->
-        </section>
+             </div>
+           <div class="portfolio-content col-xs-12 col-sm-6" data-mh="match-portfolio">
+             <div id="portfolioSlider" class="owl-carousel">
+               <!-- 1 -->
+               <div>
+                 <img src="images/portfolio-img-1.jpg" alt=""><!-- image url -->
+                 <div class="image-layer">
+                   <div class="image-title">
+                     <h3>Jeeves - Voice Activated Home Automation</h3>
+                     <a class="lightbox-popup" href="#popup-1">view detail</a>
+                   </div>
+                 </div>
+                 <!-- popup content -->
+                 <div id="popup-1" class="mfp-hide popup-box">
+                   <img src="images/portfolio-img-1.jpg" alt=""><!-- image url -->
+                   <div class="popup-content">
+                     <h3>Jeeves - Voice Activated Home Automation</h3>
+                     <p>The system consists of an Arduino connected to various home appliances[Illustrated in this case using LEDs]. The system has an accompanying mobile app that connects to the hardware over bluetooth. The app converts the user's voice input into text ;using the Google Voice API;and tranfers it over to the Arduino where the string is parsed(Some simple Natural Language Processing) and the appropriate action is taken i.e. the appropriate appliance is turned on/off.</p>
+
+                     </div>
+                 </div>
+                 <!-- end popup content -->
+               </div>
+
+             </div>
+           </div>
+         </div><!-- end row -->
+       </div><!-- end container -->
+     </section>
+     <!-- end Portfolio -->
 
 
+     <section id="services">
+     <div class="container-fluid" >
+       <div class="row">
 
+         <div class="portfolio-content col-xs-12 col-sm-6"   data-mh="match-portfolio" >
+           <div id="portfolioSlider2" class="owl-carousel"  >
+             <!-- 1 -->
+             <div>
+               <img src="images/mri.jpg" alt=""><!-- image url -->
+               <div class="image-layer">
+                 <div class="image-title">
+                   <h3>Detecting tumors in MRI scans of brains using thresholding</h3>
+                   <a class="lightbox-popup" href="#popup-2">view detail</a>
+                 </div>
+               </div>
+               <!-- popup content -->
+               <div id="popup-2" class="mfp-hide popup-box">
+                 <img src="images/mri.jpg" alt=""><!-- image url -->
+                 <div class="popup-content">
+                   <h3>Detecting tumors in MRI scans of brains using thresholding</h3>
+                   <p>This project started off as a spinoff of an image processing module I wrote for a laser guided landing system for a drone. The system processes the MRI image of the brain to produce an output image consisting of regions of interest(Tumors). The research paper I wrote for this was accepted by the Internaional Journal of Pharma and Bio Sciences.</p>
 
+                 </div>
+               </div>
+               <!-- end popup content -->
+             </div>
+           </div>
+         </div>
+         <div class="portfolio-content col-xs-12 col-sm-6"   data-mh="match-portfolio" >
+           <div id="portfolioSlider3" class="owl-carousel"  >
+             <!-- 1 -->
+             <div>
+               <img src="images/heatmap.jpg" alt=""><!-- image url -->
+               <div class="image-layer">
+                 <div class="image-title">
+                   <h3>Optimisation Of Digital Advertising using Heatmaps</h3>
+                   <a class="lightbox-popup" href="#popup-3">view detail</a>
+                 </div>
+               </div>
+               <!-- popup content -->
+               <div id="popup-3" class="mfp-hide popup-box">
+                 <img src="images/heatmap.jpg" alt=""><!-- image url -->
+                 <div class="popup-content">
+                   <h3>Optimisation Of Digital Advertising in Commercial complexes(like Malls) using Heatmaps</h3>
+                   <p>The system consists of multiple hardware components that are responsible for detecting human presence. For the case of the project the hardware component is created using Infra Red sensors and an arduino; Each individual Hardware component relays human presence info to the software backend. The backend recieves human presence data and creates heatmaps based on temporal factors. Based on trends identified using the heatmaps advertising is customized - EG: Heatmaps show concentration of people in the Foodcourt on Wedmesday Afternoons so digital advertising targets customers with Food related advertisements</p>
 
+                   </div>
+               </div>
+               <!-- end popup content -->
+             </div>
 
-
-
-
-
+           </div>
+         </div>
+         </div><!-- end row -->
+     </div><!-- end container -->
+   </section>
+   <!-- end Services -->
 
 
 
@@ -211,22 +279,7 @@ Analysts for cleaning raw data.
     <footer>
       <div class="footer-background">
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-left col-xs-6">
-              <p></p>
-            </div>
-            <div class="col-right col-xs-6">
-              <a href="#">
-                <i class="fa fa-facebook"></i>
-              </a>
-              <a href="#">
-                <i class="fa fa-twitter"></i>
-              </a>
-              <a href="#">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </div>
-          </div><!-- end row -->
+
         </div><!-- end container -->
       </div>
     </footer>
