an image extension fix

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Analysts for cleaning raw data.
            <div id="portfolioSlider2" class="owl-carousel"  >
              <!-- 1 -->
              <div>
-               <img src="images/mri.jpg" alt=""><!-- image url -->
+               <img src="images/mri.png" alt=""><!-- image url -->
                <div class="image-layer">
                  <div class="image-title">
                    <h3>Detecting tumors in MRI scans of brains using thresholding</h3>
@@ -229,7 +229,7 @@ Analysts for cleaning raw data.
                </div>
                <!-- popup content -->
                <div id="popup-2" class="mfp-hide popup-box">
-                 <img src="images/mri.jpg" alt=""><!-- image url -->
+                 <img src="images/mri.png" alt=""><!-- image url -->
                  <div class="popup-content">
                    <h3>Detecting tumors in MRI scans of brains using thresholding</h3>
                    <p>This project started off as a spinoff of an image processing module I wrote for a laser guided landing system for a drone. The system processes the MRI image of the brain to produce an output image consisting of regions of interest(Tumors). The research paper I wrote for this was accepted by the Internaional Journal of Pharma and Bio Sciences.</p>
