--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="section-background col-xs-12 col-sm-6" data-mh="match-ed">
-            <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspEducation</h2>
+            <h2>Education</h2>
             <ul class="resume-box">
               <li>
                 <div class="year" data-mh="match-edu-box-1">
@@ -94,9 +94,9 @@
               </li>
             </ul>
           </div>
-          <div class="skills-background col-xs-12 col-sm-6" data-mh="match-edu" >
-          <div class="section-background col-xs-12 col-sm-6" data-mh="match-edu" style="width: 100%;">
-            <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspExperience</h2>
+
+          <div class="section-background col-xs-12 col-sm-6" data-mh="match-edu">
+            <h2>Experience</h2>
             <ul class="resume-box">
               <li>
                 <div class="year" data-mh="match-exp-box-1">
@@ -163,7 +163,7 @@ Analysts for cleaning raw data.
 
             </ul>
           </div>
-        </div>
+
         </div><!-- end row -->
       </div><!-- end container -->
     </section>
@@ -176,12 +176,12 @@ Analysts for cleaning raw data.
      <section id="portfolio">
        <div class="container-fluid">
          <div class="row">
-           <div class="section-background col-xs-12 col-sm-6" data-mh="match-portfolio">
+           <div class="section-background col-xs-12 col-sm-6" style="height: auto;">
              <h2>Project Portfolio</h2>
              <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence</p>
 
              </div>
-           <div class="portfolio-content col-xs-12 col-sm-6" data-mh="match-portfolio">
+           <div class="portfolio-content col-xs-12 col-sm-6" style="height: auto;">
              <div id="portfolioSlider" class="owl-carousel">
                <!-- 1 -->
                <div>
@@ -216,7 +216,7 @@ Analysts for cleaning raw data.
      <div class="container-fluid" >
        <div class="row">
 
-         <div class="portfolio-content col-xs-12 col-sm-6"   data-mh="match-portfolio" >
+         <div class="portfolio-content col-xs-12 col-sm-6"   style="height: auto;" >
            <div id="portfolioSlider2" class="owl-carousel"  >
              <!-- 1 -->
              <div>
@@ -240,7 +240,7 @@ Analysts for cleaning raw data.
              </div>
            </div>
          </div>
-         <div class="portfolio-content col-xs-12 col-sm-6"   data-mh="match-portfolio" >
+         <div class="portfolio-content col-xs-12 col-sm-6"   style="height: auto;" >
            <div id="portfolioSlider3" class="owl-carousel"  >
              <!-- 1 -->
              <div>
@@ -279,9 +279,41 @@ Analysts for cleaning raw data.
     <footer>
       <div class="footer-background">
         <div class="container-fluid">
+          <div class="jumbotron" style="background-color: rgba(0,0,0,0.2); margin-left:20%; margin-right:20%;">
+        <h2 style="color:white;">Contact Me!</h2>
 
-        </div><!-- end container -->
+        <ul class="resume-box">
+          <li>
+            <div class="year" data-mh="match-exp-box-1" style="color:white;">
+              <div>
+                <h4 style="color:white;">Phone</h4>
+              </div>
+            </div>
+            <div class="box-content" data-mh="match-exp-box-1" >
+              <p>+918110020607</p>
+            </div>
+          </li>
+          <li>
+            <div class="year" data-mh="match-exp-box-2" style="color:white;">
+              <div>
+                <h4 style="color:white;">Email</h4>
+              </div>
+            </div>
+            <div class="box-content" data-mh="match-exp-box-2">
+              <p>prateekbhatnagar2016@gmail.com</p>
+            </div>
+          </li>
+
+
+        </ul>
+
+<div class="text-center">
+        <p style="align-text: center;"><a class="btn btn-lg btn-default" href="/PrateekBhatnagar_CV_rev4.pdf" role="button" style="color: black; align-text: center;" download>Download Resume</a></p>
+</div>
       </div>
+
+      </div>
+        </div><!-- end container -->
     </footer>
     <!-- end Footer -->
 
