added github links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -178,7 +180,13 @@ Analysts for cleaning raw data.
          <div class="row">
            <div class="section-background col-xs-12 col-sm-6" style="height: auto;">
              <h2>Project Portfolio</h2>
-             <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence</p>
+             <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence
+               <br>
+               <br>
+             </p>
+               <!-- Place this tag where you want the button to render. -->
+               <p style="text-align: center"><a  class="github-button" href="https://github.com/Lalbadshah" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Follow @Lalbadshah</a>
+             </p>
 
              </div>
            <div class="portfolio-content col-xs-12 col-sm-6" style="height: auto;">
@@ -198,7 +206,10 @@ Analysts for cleaning raw data.
                    <div class="popup-content">
                      <h3>Jeeves - Voice Activated Home Automation</h3>
                      <p>The system consists of an Arduino connected to various home appliances[Illustrated in this case using LEDs]. The system has an accompanying mobile app that connects to the hardware over bluetooth. The app converts the user's voice input into text ;using the Google Voice API;and tranfers it over to the Arduino where the string is parsed(Some simple Natural Language Processing) and the appropriate action is taken i.e. the appropriate appliance is turned on/off.</p>
-
+                     <p style="text-align: center">
+                       <br>
+                       <a  class="github-button" href="https://github.com/Lalbadshah" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                     </p>
                      </div>
                  </div>
                  <!-- end popup content -->
@@ -233,7 +244,10 @@ Analysts for cleaning raw data.
                  <div class="popup-content">
                    <h3>Detecting tumors in MRI scans of brains using thresholding</h3>
                    <p>This project started off as a spinoff of an image processing module I wrote for a laser guided landing system for a drone. The system processes the MRI image of the brain to produce an output image consisting of regions of interest(Tumors). The research paper I wrote for this was accepted by the Internaional Journal of Pharma and Bio Sciences.</p>
-
+                   <p style="text-align: center">
+                     <br>
+                     <a  class="github-button" href="https://github.com/Lalbadshah/" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                   </p>
                  </div>
                </div>
                <!-- end popup content -->
@@ -257,7 +271,10 @@ Analysts for cleaning raw data.
                  <div class="popup-content">
                    <h3>Optimisation Of Digital Advertising in Commercial complexes(like Malls) using Heatmaps</h3>
                    <p>The system consists of multiple hardware components that are responsible for detecting human presence. For the case of the project the hardware component is created using Infra Red sensors and an arduino; Each individual Hardware component relays human presence info to the software backend. The backend recieves human presence data and creates heatmaps based on temporal factors. Based on trends identified using the heatmaps advertising is customized - EG: Heatmaps show concentration of people in the Foodcourt on Wedmesday Afternoons so digital advertising targets customers with Food related advertisements</p>
-
+                   <p style="text-align: center">
+                     <br>
+                     <a  class="github-button" href="https://github.com/Lalbadshah/Heat-Cartography" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                   </p>
                    </div>
                </div>
                <!-- end popup content -->
