--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Analysts for cleaning raw data.
                    <p>This project started off as a spinoff of an image processing module I wrote for a laser guided landing system for a drone. The system processes the MRI image of the brain to produce an output image consisting of regions of interest(Tumors). The research paper I wrote for this was accepted by the Internaional Journal of Pharma and Bio Sciences.</p>
                    <p style="text-align: center">
                      <br>
-                     <a  class="github-button" href="https://github.com/Lalbadshah/" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                     <a  class="github-button" href="https://github.com/Lalbadshah/MRI_BrainTumor_Isolator" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
                    </p>
                  </div>
                </div>
