added about me section + updated resume

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link href="css/owl.carousel.min.css" rel="stylesheet">
     <link href="css/owl.theme.min.css" rel="stylesheet">
     <!-- Preloader -->
-    <link href="css/preloader.min.css" rel="stylesheet">
     <!-- Main styles -->
     <link href="css/theme.min.css" rel="stylesheet">
     <!-- Responsive styles -->
@@ -287,7 +286,48 @@ Analysts for cleaning raw data.
    </section>
    <!-- end Services -->
 
-
+   <section>
+     <div class="container-fluid jumbotron-img">
+       <div class="home-box1 col-xs-12">
+      <div class="jumbotron" style="color: white; background-color: rgba(0,0,0,0.6) ; margin-left:20%; margin-right:20%; margin-top:5%; margin-bottom:5%;">
+           <h2 style="color: white; border-color: white; border-bottom-color: #ffffff;">About Me</h2>
+           <h3 style="color: white;">
+             What I'm reading
+           </h3>
+           <ul>
+             <li>The Fountainhead - Ayn Rand</li>
+             <li><a href="https://www.reddit.com/r/DepthHub/">r/DeptHub</a></li>
+             <li><a href="https://www.reddit.com/r/WritingPrompts/">r/WritingPrompts</a></li>
+           </ul>
+           <h3 style="color: white;">
+             What I'm Listening to
+           </h3>
+           <ul>
+             <li><a href="http://freakonomics.com/">Freaknomics Radio podcast</a></li>
+             <li>Arctic Monkeys</li>
+             <li><a href="http://www.radiolab.org/">Radiolab Podcast</a></li>
+           </ul>
+           <h3 style="color: white;">
+             What I'm Watching
+           </h3>
+           <ul>
+             <li><a href="https://www.youtube.com/user/caseyneistat">Casey Neistats Vlogs</a></li>
+             <li><a href="https://www.youtube.com/user/Vsauce">Vsauce</a></li>
+             <li><a href="https://www.youtube.com/user/1veritasium">Veritasium</a></li>
+             <li><a href="https://www.youtube.com/user/vice">Vice</a></li>
+           </ul>
+           <h3 style="color: white;">
+           What I'm Playing
+         </h3>
+         <ul>
+           <li>The Elder Scrolls Online : Skyrim</li>
+           <li>Dragon Age Inquisition</li>
+           <li>Civilisation VI</li>
+         </ul>
+       </div>
+     </div>
+    </div>
+   </section>
 
 
 
@@ -325,7 +365,7 @@ Analysts for cleaning raw data.
         </ul>
 
 <div class="text-center">
-        <p style="align-text: center;"><a class="btn btn-lg btn-default" href="/PrateekBhatnagar_CV_rev5.pdf" role="button" style="color: black; align-text: center;" download>Download Resume</a></p>
+        <p style="align-text: center;"><a class="btn btn-lg btn-default" href="/PrateekBhatnagar_CV.pdf" role="button" style="color: black; align-text: center;" download>Download Resume</a></p>
 </div>
       </div>
 
