Updated CV, Fixed a link

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Analysts for cleaning raw data.
                      <p>The system consists of an Arduino connected to various home appliances[Illustrated in this case using LEDs]. The system has an accompanying mobile app that connects to the hardware over bluetooth. The app converts the user's voice input into text ;using the Google Voice API;and tranfers it over to the Arduino where the string is parsed(Some simple Natural Language Processing) and the appropriate action is taken i.e. the appropriate appliance is turned on/off.</p>
                      <p style="text-align: center">
                        <br>
-                       <a  class="github-button" href="https://github.com/Lalbadshah" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                       <a  class="github-button" href="https://github.com/Lalbadshah/Jeeves" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
                      </p>
                      </div>
                  </div>
