--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="box-content" data-mh="match-edu-box-2">
                   <h4>Vellore Institute Of Technology, Vellore </h4>
-                  <p>B.TECH Computer Science And Engineering <br> 8.38/10 CGPA</p>
+                  <p>B.TECH Computer Science And Engineering <br> 8.38/10 CGPA<br>3.90/4 CGPA(WES Evaluation)</p>
                 </div>
               </li>
             </ul>
