Updated with Info of Masters

--- a/index.html
+++ b/index.html
@@ -94,13 +94,25 @@
               <li>
                 <div class="year" data-mh="match-edu-box-2">
                   <div>
-                    <h4>2013-Present</h4>
+                    <h4>2013-2017</h4>
                     <span>Bachelor Degree</span>
                   </div>
                 </div>
                 <div class="box-content" data-mh="match-edu-box-2">
                   <h4>Vellore Institute Of Technology, Vellore </h4>
                   <p>B.TECH Computer Science And Engineering <br> 8.38/10 CGPA<br>3.90/4 CGPA(WES Evaluation)</p>
+                </div>
+              </li>
+              <li>
+                <div class="year" data-mh="match-edu-box-2">
+                  <div>
+                    <h4>2017-Present</h4>
+                    <span>Masters Program</span>
+                  </div>
+                </div>
+                <div class="box-content" data-mh="match-edu-box-2">
+                  <h4>Johns Hopkins University</h4>
+                  <p>Masters of Science and ENgineering in Computer Science <br> Interested in Computer Vision and Robotics research</p>
                 </div>
               </li>
             </ul>
