--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="box-content" data-mh="match-edu-box-2">
                   <h4>Johns Hopkins University</h4>
-                  <p>Masters of Science and ENgineering in Computer Science <br> Interested in Computer Vision and Robotics research</p>
+                  <p>Masters of Science and Engineering in Computer Science <br> Interested in Computer Vision and Robotics research</p>
                 </div>
               </li>
             </ul>
