--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@ Analysts for cleaning raw data.
            What I'm Playing
          </h3>
          <ul>
-           <li>The Elder Scrolls Online : Skyrim</li>
-           <li>Dragon Age Inquisition</li>
+           <li>Skyrim</li>
+           <li>Overwatch</li>
            <li>Civilisation VI</li>
          </ul>
        </div>
