Updated with new Projects

--- a/index.html
+++ b/index.html
@@ -305,6 +305,69 @@ Analysts for cleaning raw data.
          </div>
          </div><!-- end row -->
      </div><!-- end container -->
+
+     <section id="services">
+     <div class="container-fluid" >
+       <div class="row">
+
+         <div class="portfolio-content col-xs-12 col-sm-6"   style="height: auto;" >
+           <div id="portfolioSlider4" class="owl-carousel"  >
+             <!-- 1 -->
+             <div>
+               <img src="images/ml.png" alt=""><!-- image url -->
+               <div class="image-layer">
+                 <div class="image-title">
+                   <h3>Implementation of Machine Learning Concepts</h3>
+                   <a class="lightbox-popup" href="#popup-4">view detail</a>
+                 </div>
+               </div>
+               <!-- popup content -->
+               <div id="popup-4" class="mfp-hide popup-box">
+                 <img src="images/ml.png" alt=""><!-- image url -->
+                 <div class="popup-content">
+                   <h3>Implementation of Machine Learning Concepts</h3>
+                   <p>Coding implementations of concepts I learnt in Machine Learning. The concepts explored here include Kmeans, KNN and support vector machines, Linear Discriminant Analysis, Linear Gaussian Classifier, PCA and Probabilistic PCA. My work in this are is ongoing and I will be adding more implementations here in the future</p>
+                   <p style="text-align: center">
+                     <br>
+                     <a  class="github-button" href="https://github.com/Lalbadshah/Machine-Learning-Work" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                   </p>
+                 </div>
+               </div>
+               <!-- end popup content -->
+             </div>
+           </div>
+         </div>
+         <div class="portfolio-content col-xs-12 col-sm-6"   style="height: auto;" >
+           <div id="portfolioSlider5" class="owl-carousel"  >
+             <!-- 1 -->
+             <div>
+               <img src="images/asl.jpg" alt=""><!-- image url -->
+               <div class="image-layer">
+                 <div class="image-title">
+                   <h3>Transcription of The American Sign Language Alphabet from Images</h3>
+                   <a class="lightbox-popup" href="#popup-5">view detail</a>
+                 </div>
+               </div>
+               <!-- popup content -->
+               <div id="popup-5" class="mfp-hide popup-box">
+                 <img src="images/asl.jpg" alt=""><!-- image url -->
+                 <div class="popup-content">
+                   <h3>Transcription of The American Sign Language Alphabet from Images</h3>
+                   <p>This project's goal is to use hand pose images as data input to train different algorithms and then use seperate image data to test the performance of the algorithms with respect to classifification and recognition accuracy</p>
+                   <p style="text-align: center">
+                     <br>
+                     <a  class="github-button" href="https://github.com/Lalbadshah/mlsp_project" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
+                   </p>
+                   </div>
+               </div>
+               <!-- end popup content -->
+             </div>
+
+           </div>
+         </div>
+         </div><!-- end row -->
+     </div><!-- end container -->
+
    </section>
    <!-- end Services -->
 
