Updated project protfolio section with new projects

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Analysts for cleaning raw data.
          <div class="row">
            <div class="section-background col-xs-12 col-sm-6" style="height: auto;">
              <h2>Project Portfolio</h2>
-             <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Internet Of Things and Artificial Intelligence
+             <p>Here is a showcase of some of the projects I have done.These projects cover my various research interests namely - Networking, Computer Vision, Machine Learning, Internet Of Things and Artificial Intelligence
                <br>
                <br>
              </p>
@@ -326,7 +326,7 @@ Analysts for cleaning raw data.
                  <img src="images/ml.png" alt=""><!-- image url -->
                  <div class="popup-content">
                    <h3>Implementation of Machine Learning Concepts</h3>
-                   <p>Coding implementations of concepts I learnt in Machine Learning. The concepts explored here include Kmeans, KNN and support vector machines, Linear Discriminant Analysis, Linear Gaussian Classifier, PCA and Probabilistic PCA. My work in this are is ongoing and I will be adding more implementations here in the future</p>
+                   <p>Coding implementations of concepts I learnt in Machine Learning. The concepts explored here include Kmeans, KNN and support vector machines, Linear Discriminant Analysis, Linear Gaussian Classification, PCA and Probabilistic PCA. My work in this area is ongoing and I will be adding more implementations here in the future</p>
                    <p style="text-align: center">
                      <br>
                      <a  class="github-button" href="https://github.com/Lalbadshah/Machine-Learning-Work" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
