--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ Analysts for cleaning raw data.
                  <img src="images/asl.jpg" alt=""><!-- image url -->
                  <div class="popup-content">
                    <h3>Transcription of The American Sign Language Alphabet from Images</h3>
-                   <p>This project's goal is to use hand pose images as data input to train different algorithms and then use seperate image data to test the performance of the algorithms with respect to classifification and recognition accuracy</br>P.S. This project is currently under developement and will be available soon!</p>
+                   <p>This project's goal is to use hand pose images as data input to train different algorithms and then use seperate image data to test the performance of the algorithms with respect to classifification and recognition accuracy.<br>P.S. This project is currently under developement and will be available soon!</p>
                    <p style="text-align: center">
                      <br>
                      <a  class="github-button" href="https://github.com/Lalbadshah/mlsp_project" data-style="mega" aria-label="Follow @Lalbadshah on GitHub">Github</a>
