--- a/index.html
+++ b/index.html
@@ -61,15 +61,25 @@
     <div class="home-background parallax-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="home-box col-xs-12">
-                    <div>
-                        <img src="images/avatar.jpg" alt="">
+                <div class="container home-box col-xs-12">
+                    <div class="row">
+                        <div class="w-100"/>
+                        <div class="col-xs-12">
+                            <img src="images/avatar.jpg" alt="profile picture">
 
-                        <h1>Prateek Bhatnagar</h1>
+                            <h1>Prateek Bhatnagar</h1>
+                            <h3 id="sub-title">Medical DEvices ● User Experience ● Cloud ● Full Stack </h3>
+                        </div>
+                        <div class="col-xs-12">
+                            <div class="mt-1">
+                                <h6>random background image fetched from: <a href="https://unsplash.com/">unsplash</a></h6>
+                            </div>
+                        </div>
                     </div>
-                </div><!-- end row -->
+                </div>
             </div><!-- end container -->
         </div>
+
     </div>
 </section>
 <!-- end Home -->
@@ -95,11 +105,11 @@
                             <p>Worked on shipping 2 products:</p>
                             <br>
                             <ul>
-                                <li>Working on software for 510k Cleared device(Cardiology space) working on Research, Development, maintenance and Updates as well as refining the User experience of the device</li>
-                                <li>Lead team in creating testing protocols and implementing corresponding integration tests - Selenium and Jest</li>
-                                <li>Developed clean intuitive UI for performance and representation of complex information allowing user to make complex medical decisions with ease</li>
-                                <li>Specialized frontend visualization for medical data using React JS D3.js and Three.js</li>
-                                <li>Tech Stack - REACTJS,REDUX , Typescipt, FastApi, Python, MySQL, Selenium, Jest</li>
+                                <li>○ Working on software for 510k Cleared device(Cardiology space) working on Research, Development, maintenance and Updates as well as refining the User experience of the device</li>
+                                <li>○ Lead team in creating testing protocols and implementing corresponding integration tests - Selenium and Jest</li>
+                                <li>○ Developed clean intuitive UI for performance and representation of complex information allowing user to make complex medical decisions with ease</li>
+                                <li>○ Specialized frontend visualization for medical data using React JS D3.js and Three.js</li>
+                                <li>○ Tech Stack - REACTJS,REDUX , Typescipt, FastApi, Python, MySQL, Selenium, Jest</li>
                             </ul>
                         </div>
                     </li>
@@ -115,10 +125,9 @@
                             <p>Worked on shipping 2 products:</p>
                             <br>
                             <ul>
-                                <li>Software for 510k Cleared BREAKTHROUGH Med Device - System performs Lesion treatment using a Laser
-                                </li>
-                                <li>Cloud Software as a Medical Device - Prostate lesion treatment planning system - with an AI treatment planning component a unique integration for a 510k cleared medical device - Unique perspective on designing UI around expert users using AI inputs</li>
-                                <li>Technology Stack -  REACTJS, REDUX, SASS, RabbitMQ MongoDB, ,GO, Python and  AWS</li>
+                                <li>○ Software for 510k Cleared BREAKTHROUGH Med Device - System performs Lesion treatment using a Laser</li>
+                                <li>○ Cloud Software as a Medical Device - Prostate lesion treatment planning system - with an AI treatment planning component a unique integration for a 510k cleared medical device - Unique perspective on designing UI around expert users using AI inputs</li>
+                                <li>○ Technology Stack -  REACTJS, REDUX, SASS, RabbitMQ MongoDB, ,GO, Python and  AWS</li>
                             </ul>
                             </br>
                             <p>
@@ -172,8 +181,8 @@
                             <h4>Johns Hopkins University</h4>
                             <p>Masters of Science and Engineering in Computer Science:</p>
                             <ul>
-                                <li>Used Microsoft HoloLens in conjunction with pupil tracking to produce 2D heatmap of user gaze – part of a medical training system</li>
-                                <li>Used Microsoft HoloLens and pupil eye gaze tracking cameras to create a 3D gaze attention tracking experiment</li>
+                                <li>○ Used Microsoft HoloLens in conjunction with pupil tracking to produce 2D heatmap of user gaze – part of a medical training system</li>
+                                <li>○ Used Microsoft HoloLens and pupil eye gaze tracking cameras to create a 3D gaze attention tracking experiment</li>
                             </ul>
                         </div>
 
