--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Prateek Bhatnagar | Resume'</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="resume_website_react_2/public/images/favicon.png">
     <!-- ===== STYLESHEETS ===== -->
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/bootstrap.min.css" rel="stylesheet">
     <!-- Magnific Popup -->
-    <link href="css/magnific-popup.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/magnific-popup.min.css" rel="stylesheet">
     <!-- Owl Carousel -->
-    <link href="css/owl.carousel.min.css" rel="stylesheet">
-    <link href="css/owl.theme.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/owl.carousel.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/owl.theme.min.css" rel="stylesheet">
     <!-- Preloader -->
     <!-- Main styles -->
-    <link href="css/theme.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/theme.min.css" rel="stylesheet">
     <!-- Responsive styles -->
-    <link href="css/responsive.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/responsive.min.css" rel="stylesheet">
     <!-- Font Awesome Icons -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="resume_website_react_2/public/css/font-awesome.min.css" rel="stylesheet">
     <!-- Google Font -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -65,7 +65,7 @@
                     <div class="row">
                         <div class="w-100"/>
                         <div class="col-xs-12">
-                            <img src="images/avatar.jpg" alt="profile picture">
+                            <img src="resume_website_react_2/public/images/avatar.jpg" alt="profile picture">
 
                             <h1>Prateek Bhatnagar</h1>
                             <h3 id="sub-title">Medical DEvices ● User Experience ● Cloud ● Full Stack </h3>
@@ -232,7 +232,7 @@
                 <div id="portfolioSlider" class="owl-carousel">
                     <!-- 1 -->
                     <div>
-                        <img src="images/hololens.jpg" alt=""><!-- image url -->
+                        <img src="resume_website_react_2/public/images/hololens.jpg" alt=""><!-- image url -->
                         <div class="image-layer">
                             <div class="image-title">
                                 <h3>Masters Thesis work using Hololens and Eye Tracking- Pupil Labs Cams </h3>
@@ -241,7 +241,7 @@
                         </div>
                         <!-- popup content -->
                         <div id="popup-1" class="mfp-hide popup-box">
-                            <img src="images/hololens.jpg" alt=""><!-- image url -->
+                            <img src="resume_website_react_2/public/images/hololens.jpg" alt=""><!-- image url -->
                             <div class="popup-content">
                                 <h3>Masters Thesis work - Hololens and Eye Tracking Using Pupil Labs Cams</h3>
                                 <p>Resesrach work for an Mixed Reality medical training system:</p>
@@ -275,7 +275,7 @@
                 <div id="portfolioSlider4" class="owl-carousel">
                     <!-- 1 -->
                     <div>
-                        <img src="images/ml.png" alt=""><!-- image url -->
+                        <img src="resume_website_react_2/public/images/ml.png" alt=""><!-- image url -->
                         <div class="image-layer">
                             <div class="image-title">
                                 <h3>Implementation of Machine Learning Concepts</h3>
@@ -284,7 +284,7 @@
                         </div>
                         <!-- popup content -->
                         <div id="popup-4" class="mfp-hide popup-box">
-                            <img src="images/ml.png" alt=""><!-- image url -->
+                            <img src="resume_website_react_2/public/images/ml.png" alt=""><!-- image url -->
                             <div class="popup-content">
                                 <h3>Implementation of Machine Learning Concepts</h3>
                                 <p>Coding implementations of concepts I learnt in Machine Learning. The concepts
@@ -306,7 +306,7 @@
                 <div id="portfolioSlider5" class="owl-carousel">
                     <!-- 1 -->
                     <div>
-                        <img src="images/asl.jpg" alt=""><!-- image url -->
+                        <img src="resume_website_react_2/public/images/asl.jpg" alt=""><!-- image url -->
                         <div class="image-layer">
                             <div class="image-title">
                                 <h3>Transcription of The American Sign Language Alphabet from Images</h3>
@@ -315,7 +315,7 @@
                         </div>
                         <!-- popup content -->
                         <div id="popup-5" class="mfp-hide popup-box">
-                            <img src="images/asl.jpg" alt=""><!-- image url -->
+                            <img src="resume_website_react_2/public/images/asl.jpg" alt=""><!-- image url -->
                             <div class="popup-content">
                                 <h3>Transcription of The American Sign Language Alphabet from Images</h3>
                                 <p>This project's goal is to use hand pose images as data input to train different
@@ -376,20 +376,20 @@
 
 <!-- ===== JAVASCRIPTS ===== -->
 <!-- jQuery Library -->
-<script src="js/jquery.min.js"></script>
+<script src="resume_website_react_2/public/js/jquery.min.js"></script>
 <!-- Google Maps Library -->
 <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 <!-- Bootstrap -->
-<script src="js/bootstrap.min.js"></script>
+<script src="resume_website_react_2/public/js/bootstrap.min.js"></script>
 <!-- Magnific Popup -->
-<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="resume_website_react_2/public/js/jquery.magnific-popup.min.js"></script>
 <!-- Retina Graphics -->
-<script src="js/retina.min.js"></script>
+<script src="resume_website_react_2/public/js/retina.min.js"></script>
 <!-- Smooth Scroll -->
-<script src="js/smoothscroll.min.js"></script>
+<script src="resume_website_react_2/public/js/smoothscroll.min.js"></script>
 <!-- Theme Plugins -->
-<script src="js/theme-plugins.min.js"></script>
+<script src="resume_website_react_2/public/js/theme-plugins.min.js"></script>
 <!-- Custom Scripts -->
-<script src="js/scripts.min.js"></script>
+<script src="resume_website_react_2/public/js/scripts.min.js"></script>
 </body>
 </html>
